# kitkat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
src/kitkat/: __init__.py  exceptions.py
src/kitkat/_internal/: __init__.py  http.py  retry.py  tokenizers.py
src/kitkat/abc/: __init__.py  provider.py
src/kitkat/core/: __init__.py  base.py  enums.py  exceptions.py  models.py  schemas.py
src/kitkat/llm/: exceptions.py
src/kitkat/providers/: __init__.py  _registry.py
src/kitkat/providers/anthropic/: __init__.py  provider.py
src/kitkat/providers/gemini/: __init__.py  provider.py
src/kitkat/providers/google/: provider.py
src/kitkat/providers/openai/: __init__.py  provider.py
src/kitkat/service/: __init__.py  byok.py  cache.py  factory.py  managed.py  router.py  service.py
tests/unit/_internal/: test_retry.py  test_tokenizers.py
tests/unit/abc/: test_provider.py
tests/unit/core/: test_models.py
tests/unit/providers/: test_anthropic_error_map.py  test_anthropic_thinking.py  test_gemini_error_map.py  test_gemini_thinking.py  test_openai_error_map.py  test_openai_thinking.py  test_registry.py
tests/unit/service/: test_byok_service.py  test_cache.py  test_llm_service.py  test_router.py
