[project]
name = "kitkat"
version = "0.1.0"
description = "Your modern & minimal LLM-framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "google-genai>=2.8.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tiktoken>=0.13.0",
]
