[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitkat"
version = "0.1.0"
description = "A modern & minimal LLM-framework."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Rajesh Mondal"}]
keywords = ["llm", "ai", "pydantic-ai", "byok"]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
# ── Provider extras: install only what you use ────────────────────────────
anthropic     = ["anthropic>=0.111.0"]
openai        = ["openai>=2.43.0"]
gemini        = ["google-genai>=2.8.0"]
all-providers = [
    "kitkat[anthropic]",
    "kitkat[openai]",
    "kitkat[gemini]",
]

# ── Feature extras ────────────────────────────────────────────────────────
agents        = ["pydantic-ai>=1.107.0"]          # PydanticAI agent layer
workflows     = ["langgraph>=1.2.6"]            # LangGraph stateful workflows
observability = ["logfire>=4.37.0", "langfuse>=4.9.1"]

# ── Bundles ───────────────────────────────────────────────────────────────
all = [
    "kitkat[all-providers]",
    "kitkat[agents]",
    "kitkat[workflows]",
    "kitkat[observability]",
]

# ── Dev (not installed by library consumers) ──────────────────────────────
dev = [
    "kitkat[all]",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "hatch",
]

[project.urls]
Homepage      = "https://github.com/yourorg/yourlibname"
Documentation = "https://yourlibname.readthedocs.io"
Changelog     = "https://github.com/yourorg/yourlibname/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/yourorg/yourlibname/issues"

# ── Entry points: built-in providers register here ────────────────────────
# Third-party packages use the same mechanism to ship custom providers.
[project.entry-points."kitkat.providers"]
anthropic = "kitkat.providers.anthropic:AnthropicProvider"
openai    = "kitkat.providers.openai:OpenAIProvider"
gemini    = "kitkat.providers.gemini:GeminiProvider"

[tool.hatch.build.targets.wheel]
packages = ["src/kitkat"]

[tool.mypy]
strict         = true
python_version = "3.11"
files          = ["src/kitkat"]

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","TCH","ANN"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:","@overload","raise NotImplementedError"]
