[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitkat"
version = "0.2.0"
description = "Your modern & minimal LLM-framework."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Rajesh Mondal", email = "rajeshtechforge@gmail.com"}]
keywords = ["llm", "ai", "agent", "kitkat", "byok"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# ── Mandatory dependencies ---------------------
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13",
    "pydantic-settings>=2.13.0",
    "tiktoken>=0.13.0",
]

# ── Provider extras ────────────────────────────
[project.optional-dependencies]
anthropic     = ["anthropic>=0.76.0"]
openai        = ["openai>=2.15"]
gemini        = ["google-genai>=1.57.0"]
all-providers = [
    "kitkat[anthropic]",
    "kitkat[openai]",
    "kitkat[gemini]",
]

# ── Feature extras ────────────────────────────────────────────────────────
# agents        = ["pydantic-ai>=1.107.0"]
# workflows     = ["langgraph>=1.2.6"]
# observability = ["logfire>=4.37.0", "langfuse>=4.9.1"]

# ── Bundles ───────────────────────────────────────────────────────────────
all = [
    "kitkat[all-providers]",
    # "kitkat[agents]",
    # "kitkat[workflows]",
    # "kitkat[observability]",
]

# ── Dev (not installed by library consumers) ──────────────────────────────
dev = [
    "kitkat[all]",
    "pytest>=9.0.3",
    "mypy>=1.20.0",
    "ruff>=0.15.0",
    "pytest-asyncio>=1.4.0",
    "hatch",
]

[project.urls]
Homepage      = "https://github.com/RajeshTechForge/kitkat"
Changelog     = "https://github.com/RajeshTechForge/kitkat/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/RajeshTechForge/kitkat/issues"

# ── Entry points: built-in providers register here ────────────────────────
[project.entry-points."kitkat.providers"]
anthropic = "kitkat.providers.anthropic:AnthropicProvider"
openai    = "kitkat.providers.openai:OpenAIProvider"
gemini    = "kitkat.providers.gemini:GeminiProvider"

[tool.hatch.build.targets.wheel]
packages = ["src/kitkat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests/unit"]
markers = [
    "integration: hits real APIs — run with INTEGRATION_TESTS=1",
    "slow: takes >2s",
]

[tool.mypy]
strict         = true
python_version = "3.11"
files          = ["src/kitkat"]

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","TCH"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:","@overload","raise NotImplementedError"]
